# fastapi-depends-ext

./: README.md  example.py  pyproject.toml
.github/workflows/: github-ci.yml  publish.yaml
extdepends/: __init__.py  di.py  merge_args.py
tests/: test_contextmanager_resource.py  test_function_resource.py  test_generator_resource.py  test_inner_depends_on_resource.py  test_multi_app.py  test_resource_dependcy_override.py  test_use_resource_as_function.py
