[tool.poetry]
name = "extdepends"
version = "0.1.0"
description = ""
authors = ["Daniil Solynin <solynynd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
