[tool.poetry]
name = "extdepends"
version = "0.1.0"
description = ""
authors = ["Daniil Solynin <solynynd@gmail.com>"]
readme = "README.md"
packages = [{include = "extdepends"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
