[tool.poetry]
name = "fastapi-depends-extension"
version = "0.2.0"
description = ""
authors = ["Daniil Solynin <solynynd@gmail.com>"]
readme = "README.md"
packages = [{include = "extdepends"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
uvicorn = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
